// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SecretsApi createNewVersionOfSecret() 1: Create new version of existing secret: esv-frodo-test-secret2 - success 1`] = `
{
  "createDate": "2024-01-20T04:38:17.953181Z",
  "loaded": false,
  "status": "ENABLED",
  "version": "4",
}
`;

exports[`SecretsApi createNewVersionOfSecret() 2: Create new version of non-existing secret: esv-does-not-exist - error 1`] = `[AxiosError: Request failed with status code 404]`;

exports[`SecretsApi createNewVersionOfSecret() 3: Create new version of existing secret with pem encoding: esv-frodo-test-secret5 - success 1`] = `
{
  "createDate": "2024-01-20T04:38:18.741593Z",
  "loaded": false,
  "status": "ENABLED",
  "version": "2",
}
`;

exports[`SecretsApi deleteSecret() 1: Delete existing secret: esv-frodo-test-secret3 - success 1`] = `
{
  "_id": "esv-frodo-test-secret3",
  "activeVersion": "1",
  "description": "Frodo Test Secret Three Description",
  "encoding": "generic",
  "lastChangeDate": "2024-01-20T04:38:12.759578Z",
  "lastChangedBy": "6bac97fb-0665-4ba9-b66c-1cf70e074d72",
  "loaded": false,
  "loadedVersion": "",
  "useInPlaceholders": true,
}
`;

exports[`SecretsApi deleteVersionOfSecret() 1: Delete version 1 of secret: esv-frodo-test-secret2 - success 1`] = `
{
  "createDate": "2024-01-20T04:38:10.824205Z",
  "loaded": false,
  "status": "DESTROYED",
  "version": "1",
}
`;

exports[`SecretsApi getSecret() 1: Get existing secret: esv-frodo-test-secret1 1`] = `
{
  "_id": "esv-frodo-test-secret1",
  "activeVersion": "3",
  "description": "Frodo Test Secret One Description",
  "encoding": "generic",
  "lastChangeDate": "2024-01-20T04:38:09.879245Z",
  "lastChangedBy": "6bac97fb-0665-4ba9-b66c-1cf70e074d72",
  "loaded": false,
  "loadedVersion": "",
  "useInPlaceholders": true,
}
`;

exports[`SecretsApi getSecret() 2: Get non-existing secret: esv-does-not-exist 1`] = `[AxiosError: Request failed with status code 404]`;

exports[`SecretsApi getSecretVersions() 1: Get versions of existing secret: esv-frodo-test-secret1 1`] = `
[
  {
    "createDate": "2024-01-20T04:38:09.351923Z",
    "loaded": false,
    "status": "ENABLED",
    "version": "3",
  },
  {
    "createDate": "2024-01-20T04:38:08.638165Z",
    "loaded": false,
    "status": "DISABLED",
    "version": "2",
  },
  {
    "createDate": "2024-01-20T04:38:08.099106Z",
    "loaded": false,
    "status": "ENABLED",
    "version": "1",
  },
]
`;

exports[`SecretsApi getSecretVersions() 2: Get versions of non-existing secret: esv-does-not-exist 1`] = `[AxiosError: Request failed with status code 404]`;

exports[`SecretsApi getSecrets() 1: Get all secrets - success 1`] = `
{
  "pagedResultsCookie": null,
  "remainingPagedResults": -1,
  "result": [
    {
      "_id": "esv-frodo-test-secret1",
      "activeVersion": "3",
      "description": "Frodo Test Secret One Description",
      "encoding": "generic",
      "lastChangeDate": "2024-01-20T04:38:09.879245Z",
      "lastChangedBy": "6bac97fb-0665-4ba9-b66c-1cf70e074d72",
      "loaded": false,
      "loadedVersion": "",
      "useInPlaceholders": true,
    },
    {
      "_id": "esv-frodo-test-secret2",
      "activeVersion": "3",
      "description": "Frodo Test Secret Two Description",
      "encoding": "generic",
      "lastChangeDate": "2024-01-20T04:38:11.944536Z",
      "lastChangedBy": "6bac97fb-0665-4ba9-b66c-1cf70e074d72",
      "loaded": false,
      "loadedVersion": "",
      "useInPlaceholders": true,
    },
    {
      "_id": "esv-frodo-test-secret3",
      "activeVersion": "1",
      "description": "Frodo Test Secret Three Description",
      "encoding": "generic",
      "lastChangeDate": "2024-01-20T04:38:12.759578Z",
      "lastChangedBy": "6bac97fb-0665-4ba9-b66c-1cf70e074d72",
      "loaded": false,
      "loadedVersion": "",
      "useInPlaceholders": true,
    },
    {
      "_id": "esv-test-secret-cert-pem",
      "activeVersion": "1",
      "description": "This is a test secret from a pem encoded cert file.",
      "encoding": "pem",
      "lastChangeDate": "2024-01-20T03:48:49.005574Z",
      "lastChangedBy": "6bac97fb-0665-4ba9-b66c-1cf70e074d72",
      "loaded": false,
      "loadedVersion": "",
      "useInPlaceholders": true,
    },
    {
      "_id": "esv-test-secret-cert-pem-raw",
      "activeVersion": "1",
      "description": "This is a test secret from a pem encoded cert file (raw).",
      "encoding": "pem",
      "lastChangeDate": "2024-01-20T03:49:20.270526Z",
      "lastChangedBy": "6bac97fb-0665-4ba9-b66c-1cf70e074d72",
      "loaded": false,
      "loadedVersion": "",
      "useInPlaceholders": true,
    },
    {
      "_id": "esv-test-secret-euler",
      "activeVersion": "1",
      "description": "A test secret containing the value of Euler's number",
      "encoding": "generic",
      "lastChangeDate": "2023-12-14T15:27:34.607038Z",
      "lastChangedBy": "phales@trivir.com",
      "loaded": true,
      "loadedVersion": "1",
      "useInPlaceholders": true,
    },
    {
      "_id": "esv-test-secret-file-base64hmac",
      "activeVersion": "1",
      "description": "This is a test secret from base64 encoded hmac key file.",
      "encoding": "base64hmac",
      "lastChangeDate": "2024-01-20T03:46:37.42544Z",
      "lastChangedBy": "6bac97fb-0665-4ba9-b66c-1cf70e074d72",
      "loaded": false,
      "loadedVersion": "",
      "useInPlaceholders": true,
    },
    {
      "_id": "esv-test-secret-file-base64hmac-raw",
      "activeVersion": "1",
      "description": "This is a test secret from base64 encoded hmac key file (raw).",
      "encoding": "base64hmac",
      "lastChangeDate": "2024-01-20T03:47:03.695151Z",
      "lastChangedBy": "6bac97fb-0665-4ba9-b66c-1cf70e074d72",
      "loaded": false,
      "loadedVersion": "",
      "useInPlaceholders": true,
    },
    {
      "_id": "esv-test-secret-pi",
      "activeVersion": "1",
      "description": "Secret that contains the value of pi",
      "encoding": "generic",
      "lastChangeDate": "2023-12-14T15:22:28.519043Z",
      "lastChangedBy": "phales@trivir.com",
      "loaded": true,
      "loadedVersion": "1",
      "useInPlaceholders": true,
    },
    {
      "_id": "esv-test-secret-pi-generic",
      "activeVersion": "2",
      "description": "",
      "encoding": "generic",
      "lastChangeDate": "2024-01-20T00:15:02.079462Z",
      "lastChangedBy": "6bac97fb-0665-4ba9-b66c-1cf70e074d72",
      "loaded": false,
      "loadedVersion": "",
      "useInPlaceholders": true,
    },
  ],
  "resultCount": 10,
  "totalPagedResults": -1,
  "totalPagedResultsPolicy": "NONE",
}
`;

exports[`SecretsApi getVersionOfSecret() 1: Get version 2 of existing secret: esv-frodo-test-secret1 1`] = `
{
  "createDate": "2024-01-20T04:38:08.638165Z",
  "loaded": false,
  "status": "DISABLED",
  "version": "2",
}
`;

exports[`SecretsApi getVersionOfSecret() 2: Get version 2 of non-existing secret: esv-does-not-exist 1`] = `[AxiosError: Request failed with status code 404]`;

exports[`SecretsApi putSecret() 1: Create secret: esv-frodo-test-secret4 - success 1`] = `
{
  "_id": "esv-frodo-test-secret4",
  "activeVersion": "1",
  "description": "Frodo Test Secret Four Description",
  "encoding": "generic",
  "lastChangeDate": "2024-01-20T04:38:14.13632315Z",
  "lastChangedBy": "6bac97fb-0665-4ba9-b66c-1cf70e074d72",
  "loaded": false,
  "loadedVersion": "",
  "useInPlaceholders": true,
}
`;

exports[`SecretsApi putSecret() 2: Create pem encoded secret: esv-frodo-test-secret5 - success 1`] = `
{
  "_id": "esv-frodo-test-secret5",
  "activeVersion": "1",
  "description": "Frodo Test PEM encoded Secret Five Description",
  "encoding": "pem",
  "lastChangeDate": "2024-01-20T04:38:14.714274905Z",
  "lastChangedBy": "6bac97fb-0665-4ba9-b66c-1cf70e074d72",
  "loaded": false,
  "loadedVersion": "",
  "useInPlaceholders": true,
}
`;

exports[`SecretsApi setSecretDescription() 1: Set existing secret's description: esv-frodo-test-secret2 - success 1`] = `""`;

exports[`SecretsApi setStatusOfVersionOfSecret() 1: Disable version 2 of existing secret: esv-frodo-test-secret2 - success 1`] = `
{
  "createDate": "2024-01-20T04:38:11.281637Z",
  "loaded": false,
  "status": "DISABLED",
  "version": "2",
}
`;

exports[`SecretsApi setStatusOfVersionOfSecret() 2: Disable version 2 of non-existing secret: esv-does-not-exist - error 1`] = `[AxiosError: Request failed with status code 404]`;
